<resources>

    <string name="think_company_name" translatable="false">บริษัท ธิงค เทคโนโลยี จำกัด</string>

    <!-- A -->
    <string name="app_name">RUNEX</string>
    <string name="app_version">App version</string>
    <string name="app_description">บันทึกและส่งระยะวิ่ง\nด้วยแอปฯ RUNEX</string>
    <string name="app_description_2">แอพพลิเคชั่นสำหรับส่งระยะผลวิ่ง\nVirtual Run สำหรับสมาชิก Runex</string>
    <string name="address">Address</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_image">Add Image</string>
    <string name="add_member">Add Member</string>
    <string name="add_member_success">Add member success</string>
    <string name="amount">Amount</string>
    <string name="activity_list">Activity List</string>
    <string name="activity_date">Activity Date</string>
    <string name="all_event">All Events</string>
    <string name="all_events_to_submit">All events to submit</string>
    <string name="allow_permission_in_setting">To use this feature, you need to allow permission in setting.</string>
    <string name="application_service_and_devices">Application Service and Devices</string>
    <string name="about_us">About us</string>
    <string name="action">Action</string>
    <string name="approve">Approve</string>

    <!-- B -->
    <string name="birth_date">Birth date</string>
    <string name="blood_type">Blood type</string>
    <string name="blood_type_a" translatable="false">A</string>
    <string name="blood_type_ab" translatable="false">AB</string>
    <string name="blood_type_b" translatable="false">B</string>
    <string name="blood_type_o" translatable="false">O</string>

    <!-- c -->
    <string name="camera">Camera</string>
    <string name="camera_permission_denied">Unable to access your camera due to being denied.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_update_app">You cancel for update new version.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_register">Confirm register</string>
    <string name="confirm_submit_result">Confirm to submit</string>
    <string name="confirm_to_ending_run">You confirm to ending run?</string>
    <string name="confirm_to_logout">You confirm to logout?</string>
    <string name="confirm_to_add_member">Confirm to add %1$s to your team?</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="calories_kcal">Calories(kcal)</string>
    <string name="contract">Contract</string>
    <string name="connect_application">Connect Applications</string>
    <string name="color_optional">Color (Optional)</string>
    <string name="check_information">Check information</string>
    <string name="citizen_id">Citizen Id</string>
    <string name="closed">Closed</string>
    <string name="color">Color</string>

    <!-- D -->
    <string name="dashboard">Dashboard</string>
    <string name="detail">Detail</string>
    <string name="default_">Default</string>
    <string name="distances">Distances</string>
    <string name="distances_kg">Distances(km)</string>
    <string name="duration">Duration</string>
    <string name="district">Amphoe</string>
    <string name="data_not_found">Data not found.</string>
    <string name="download_qr">Download QR</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete">Delete</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="delete_workout_confirm_msg">Do you want to delete this activity?</string>

    <!-- E -->
    <string name="edit">Edit</string>
    <string name="edit_info">Edit info</string>
    <string name="email">Email</string>
    <string name="events">Events</string>
    <string name="event_detail">Event Detail</string>
    <string name="error">Error</string>
    <string name="end_of_run">End of run</string>
    <string name="english_language" translatable="false">English</string>
    <string name="environment_dev" translatable="false">Dev</string>
    <string name="environment_production" translatable="false">Production</string>

    <!-- F -->
    <string name="facebook">Facebook</string>
    <string name="female">Female</string>
    <string name="failed">Failed</string>
    <string name="fill_out_user_info">Fill out user info</string>
    <string name="fill_out_address">Fill out address</string>

    <!-- G -->
    <string name="get_started">Get started</string>
    <string name="gender">Gender</string>
    <string name="gallery_permission_denied">Unable to access your gallery due to being denied.</string>
    <string name="generate_qr_code">generate QR Code</string>

    <!-- H -->
    <string name="history">History</string>
    <string name="house_no">No.</string>

    <!-- I -->
    <string name="invalid_data_format">Invalid data format.</string>

    <!-- J -->

    <!-- K -->
    <string name="km">km</string>

    <!-- L -->
    <string name="language">Language</string>
    <string name="last_name">Last name</string>
    <string name="logout">Logout</string>
    <string name="location_permission_denied">Unable to access your current location due to being denied.</string>
    <string name="leader_board">Leader Board</string>


    <!-- M -->
    <string name="male">Male</string>
    <string name="my_events">My Events</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="member">Member</string>
    <string name="member_list">Member List</string>

    <!-- Time duration in minutes per kilometer. But design use word 'Pace'-->
    <string name="minutes_per_kilometer_placeholder">Pace(min/km)</string>

    <!-- N -->
    <string name="name">Name</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="number_of_time">Time</string>
    <string name="number_of_times">Times</string>
    <string name="no_shirts_to_choose">No shirts to choose</string>

    <!-- O -->
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="open">Open</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="open_camera">Open Camera</string>
    <string name="order_no">Order No</string>
    <string name="optional">Optional</string>

    <!-- P -->
    <string name="pause_recording">Pause</string>
    <string name="profile">Profile</string>
    <string name="please_specify_your_ebib">Please enter your EBIB</string>
    <string name="please_login">Please login</string>
    <string name="please_enter_correct_citizen_id">Please enter the correct citizen id number</string>
    <string name="please_enter_correct_phone_number">Please enter the correct phone number</string>
    <string name="phone">Phone</string>
    <string name="province">Province</string>
    <string name="price">Price</string>
    <string name="payment">Payment</string>
    <string name="payment_successfully">Payment successfully</string>
    <string name="pay_event_in_progress">In progress…\nPlease do not leave this page until the transaction is complete.</string>

    <!-- Q -->
    <string name="qr_code_invalid">QR Code invalid.</string>

    <!-- R -->
    <string name="register">Register</string>
    <string name="register_date">Register date</string>
    <string name="register_event">Register event</string>
    <string name="register_event_success">Register event success</string>
    <string name="register_confirmation">Register confirmation</string>
    <string name="resume_recording">Resume</string>
    <string name="restart">Restart</string>

    <!-- S -->
    <string name="select_image">Select image</string>
    <string name="select_ticket_type">Select ticket</string>
    <string name="select_shirt_size">Select shirt size</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="setting">Setting</string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="submit_result">Submit Result</string>
    <string name="submit_result_running">Submit Result</string>
    <string name="submit_result_running_success">Submit Result Success</string>
    <string name="summary">Summary</string>
    <string name="success">Success</string>
    <string name="share">Share</string>
    <string name="save_to_device">Save to device</string>
    <string name="storage_permission_denied">Unable to access your storage due to being denied.</string>
    <string name="sub_district">District</string>
    <string name="shirt_size">Shirt Size</string>
    <string name="service_unavailable">The service is unavailable for now.</string>
    <string name="scan_qr_code_for_add_member_in_event">Scan QR Code for add member to event</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="sign_in_with_google">Signin with Google</string>
    <string name="sign_in_with_facebook">Signin with Facebook</string>
    <string name="sign_in_with_appleid">Signin with Apple ID</string>
    <string name="sign_in_with_line">Signin with Line</string>
    <string name="sign_in_title_message">Sign in \n to workout and send activities</string>

    <!-- T -->
    <string name="total_distances">Total Distances</string>
    <string name="total_price">Total Price</string>
    <string name="thai_bath">THB</string>
    <string name="thank_you_for_payment">Thank you for payment.</string>
    <string name="team">Team</string>
    <string name="team_name">Team name</string>
    <string name="team_name_optional">Team name (Optional)</string>
    <string name="team_management">Team Management</string>
    <string name="team_leader">Team Leader</string>
    <string name="take_note">Note</string>
    <string name="thai_language" translatable="false">ไทย</string>

    <!-- U -->
    <string name="username">Username</string>
    <string name="update_app_just_downloaded">An update has just been downloaded.</string>
    <string name="update_app_failed">App update failed.</string>
    <string name="update_app_success">App update success.</string>
    <string name="update_info">Update Info</string>
    <string name="update_profile_image">Update Profile Image…</string>
    <string name="update_registration">Update registration</string>
    <string name="update_registration_success">Update registration success</string>
    <string name="upload_qr">อัปโหลด QR</string>


    <!-- V -->
    <string name="view_leader_board">View Leader Board</string>
    <string name="village_no">Village No.</string>

    <!-- W -->
    <string name="warning">Warning</string>
    <string name="waiting_for_approve">Waiting for approve</string>
    <string name="waiting_for_payment">Waiting for payment</string>
    <string name="waiting_for_confirm">Waiting for update</string>
    <string name="workout">Workout</string>

    <!-- Y -->

    <!-- Z -->
    <string name="zip_code">Zip code</string>
    <string name="zone">Zone</string>
    <string name="zone_optional">Zone (Optional)</string>

    <!-- Hint -->
    <string name="hint_time" translatable="false">00:00:00</string>
    <string name="hint_time_minute" translatable="false">00:00</string>
    <string name="hint_date" translatable="false">dd MMM yyyy</string>
    <string name="hint_zero" translatable="false">0</string>

    <!-- Input required -->
    <string name="input_required">%1$s is required</string>
    <string name="activity_image_required">Please add activity image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>