<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="@dimen/space_24dp"
    tools:context=".ui.component.GenderDialog">

    <TextView
        android:id="@+id/title_label"
        style="@style/AppAlertDialog.TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/message_label"
        style="@style/AppAlertDialog.BodyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/please_select_your_gender" />

    <TextView
        android:id="@+id/female_label"
        style="@style/TextBodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_label"
        android:layout_marginTop="@dimen/space_24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/female" />

    <View
        android:id="@+id/underline_female_label"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/female_label"
        android:background="@color/line" />

    <TextView
        android:id="@+id/male_label"
        style="@style/TextBodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline_female_label"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/male" />

    <View
        android:id="@+id/underline_male_label"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/male_label"
        android:background="@color/line" />

    <TextView
        android:id="@+id/other_label"
        style="@style/TextBodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline_male_label"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/other" />

    <View
        android:id="@+id/guideline_center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negative_button"
        style="@style/Button.BorderGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/other_label"
        android:layout_marginTop="@dimen/space_24dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_toStartOf="@+id/guideline_center_horizontal"
        android:minHeight="@dimen/space_40dp"
        android:text="@string/cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positive_button"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/other_label"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/space_24dp"
        android:layout_toEndOf="@+id/guideline_center_horizontal"
        android:minHeight="@dimen/space_40dp"
        android:text="@string/ok" />

</RelativeLayout>