<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorBackgroundPrimary"
    android:padding="@dimen/space_24dp"
    android:theme="@style/Theme.Runex.Light"
    tools:context=".feature.user.BloodTypeDialog">

    <TextView
        android:id="@+id/blood_type_a_label"
        style="@style/Text.BodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/blood_type_a" />

    <View
        android:id="@+id/underline_blood_type_a_label"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/blood_type_a_label"
        android:background="@color/line" />

    <TextView
        android:id="@+id/blood_type_ab_label"
        style="@style/Text.BodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline_blood_type_a_label"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/blood_type_ab" />

    <View
        android:id="@+id/underline_blood_type_ab_label"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/blood_type_ab_label"
        android:background="@color/line" />

    <TextView
        android:id="@+id/blood_type_b_label"
        style="@style/Text.BodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline_blood_type_ab_label"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/blood_type_b" />

    <View
        android:id="@+id/underline_blood_type_b_label"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/blood_type_b_label"
        android:background="@color/line" />

    <TextView
        android:id="@+id/blood_type_o_label"
        style="@style/Text.BodyHeading.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline_blood_type_b_label"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="@dimen/space_48dp"
        android:text="@string/blood_type_o" />


</RelativeLayout>