<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:context=".feature.workout.summary.WorkoutSummaryScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundPrimary"
        android:paddingTop="@dimen/space_24dp"
        app:elevation="0dp">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/map_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/distance_label"
        android:layout_below="@+id/top_bar"
        android:visibility="invisible"
        tools:visibility="visible">

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="FragmentTagUsage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/space_96dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16dp"
            android:adjustViewBounds="true"
            app:srcCompat="@mipmap/ic_logo_runex" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/layout_workout_summary_on_map"
            android:layout_alignBottom="@+id/layout_workout_summary_on_map"
            android:alpha="0.68"
            android:background="@drawable/bg_fading_black_vertical" />

        <include
            android:id="@+id/layout_workout_summary_on_map"
            layout="@layout/layout_workout_summary_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/distance_placeholder"
        style="@style/Text.BodyHeading.Thirdly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distance_label"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="end"
        android:text="@string/distances_kg" />

    <TextView
        android:id="@+id/distance_label"
        style="@style/Text.Title.Primary.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/duration_label"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_4dp"
        android:layout_toEndOf="@+id/distance_placeholder"
        android:gravity="end"
        android:maxLines="1"
        android:text="0.00" />

    <TextView
        android:id="@+id/duration_placeholder"
        style="@style/Text.BodyHeading.Thirdly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/duration_label"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/duration_label"
        style="@style/Text.Title.Primary.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/duration_per_kilometer_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_4dp"
        android:layout_toEndOf="@+id/duration_placeholder"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/hint_time" />

    <TextView
        android:id="@+id/duration_per_kilometer_placeholder"
        style="@style/Text.BodyHeading.Thirdly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/duration_per_kilometer_label"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="end"
        android:text="@string/minutes_per_kilometer_placeholder" />

    <TextView
        android:id="@+id/duration_per_kilometer_label"
        style="@style/Text.Title.Primary.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calorie_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_4dp"
        android:layout_toEndOf="@+id/duration_per_kilometer_placeholder"
        android:gravity="end"
        android:text="@string/hint_time_minute" />

    <TextView
        android:id="@+id/calorie_placeholder"
        style="@style/Text.BodyHeading.Thirdly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calorie_label"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/calories_kcal" />

    <TextView
        android:id="@+id/calorie_label"
        style="@style/Text.Title.Primary.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line_above_submit_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_16dp"
        android:layout_toEndOf="@+id/calorie_placeholder"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/hint_zero" />

    <View
        android:id="@+id/line_above_submit_button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/submit_button"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:background="@color/line" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        style="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/space_16dp"
        android:paddingStart="@dimen/space_48dp"
        android:paddingEnd="@dimen/space_48dp"
        android:text="@string/submit_result" />

    <com.think.runex.component.ProgressLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar"
        android:background="@color/backgroundPrimary"
        android:visibility="gone" />

</RelativeLayout>