<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_logo_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_72dp"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/im_app_logo" />

    <ImageView
        android:id="@+id/on_boarding_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo_image"
        android:layout_marginTop="@dimen/space_16dp"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/im_on_boarding" />

    <TextView
        android:id="@+id/description_label"
        style="@style/Text.HeadLine.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="center"
        android:text="@string/app_description" />

    <TextView
        android:id="@+id/description_label_2"
        style="@style/Text.BodyHeading.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_label"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_48dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:gravity="center"
        android:text="@string/app_description_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_button"
        style="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_label_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_48dp"
        android:layout_marginBottom="@dimen/space_32dp"
        android:paddingStart="@dimen/space_48dp"
        android:paddingEnd="@dimen/space_48dp"
        android:text="@string/get_started" />
</RelativeLayout>